# markdown-proxy-api

./: README.md  pyproject.toml
app/: main.py
app/api/: endpoints.py
app/models/: markdown_file.py
app/repositories/: base.py  file_repository.py
app/services/: markdown_service.py
docs/: step_1_repository_pattern.md  step_2_markdown_model.md  step_3_file_repository.md  step_4_service_layer.md  step_5_api_endpoints.md  step_6_craete_table_of_contents.md  step_7_static_website_with_quarto.md
